@@ -1,1 +1,1 @@
-1.6.2.17-rc3
+1.6.2.17
