@@ -1,3 +1,9 @@
+2011-02-22  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.2.17 Released.
+
+	* Merged in changes related to AST-2011-002
+
 2011-02-16  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.2.17-rc3 Released.
